Fix:Align Text on the left of the image vertically

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ a {
 .container{
   display: flex;
   /* flex-direction: column;*/
-  justify-content: space-evenly;
+  justify-content: flex-start;
   color: #CCB9A7;
   background-color:#76726F;
   padding: 32px;
@@ -51,11 +51,14 @@ button{
 #jacket{
   height: 303px;
 }
-.img-container{
-flex:  0 calc(100% - 350px);
-max-width: calc(100% - 350px);
-align-items: center; 
-
+.img-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center; 
+  text-align: center; 
+  flex: 1 1 auto; 
+  max-width: calc(100% - 350px); 
 }
 
 /* CSS */
